2003-06-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Cleaned up some -Wall warnings under unix.
	* generic/udp_tcl.h:    "         "
	* win/tcludp.rc:     Updated the version number and fixed line endings
	* doc/udp.man:          "          "

2003-03-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: define ioctlsocket for unix

2003-03-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tcludp.dsp:
	* configure.in: bumped patchlevel to 1.0.5

2003-03-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: General layout rearrangement to put tcl
	command procs, channel handler procs and utility procs together.
	* generic/udp_tcl.c: Added channel option handlers to enable the
	use of 'fconfigure' to hopefully replace udp_conf.
	* generic/udp_tcl.c (udpGetHandle): Fixed to return the handle
	properly.

2003-03-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Fix include list to use the autoconfig test
	results. Fixes for CONST Tcl 8.3/8.4 compatability.
	* genetic/udp_tcl.c: Enhanced udp_open and udp_conf to permit the
	use of symbolic port names. Added some tests for this.

2003-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Stop a crash when udp_conf -remote called
	before setting the remote host.
	* tests: Added tests directory and some basic tests.
	* doc: Added doc directory with doctools format man page.
	* Makefile.in: fixed the documentation in the build.
	* README: rewrote as installation instructions.
	* license.terms: copyright as perl the udp_tcl.c file.
	* tclconfig: brought in the newer versions from tcl cvs.
	* tcludp.dsp: updated.

2003-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all: Re-structured as a TEA2 compatible package and sorted out
	the configure/make files.

2003-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* udp_tcl.c: Reduced the number of WIN32 sections using a few